[package]
name = "navigatum-feedback"
version = "1.0.0"
authors = ["Markus A <ge75sig@mytum.de>", "Frank Elsinga <frank@elsinga.de>"]
edition = "2021"
description = "Navigating around TUM with excellence – A feedback system to submit feedback via github issues"
repository = "https://github.com/TUM-Dev/navigatum"
readme = "README.md"
license = "GPL-3.0"
keywords = ["website", "feedback", "api-rest", "tum"]

[[bin]]
name = "navigatum-feedback"
path = "src/main.rs"

[dependencies]
# shared
log.workspace = true
structured-logger.workspace = true
tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-web-prom.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true

rand = "0.8.5"
regex = "1.10.3"
octocrab = { version = "0.36.0", default-features = false, features = ["rustls", "rustls-webpki-tokio", "retry", "default-client"] }

# web
jsonwebtoken = { version = "9.2.0", default-features = false, features = [] }
chrono = { version = "0.4.35", default-features = false, features = [] }
actix-governor = { version = "0.5.0", features = ["logger"] }

# proposing feedback
tempfile = "3.10.1"
image.workspace = true
base64 = "0.22.0"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions.workspace = true
