[package]
name = "navigatum-main-api"
version = "1.0.0"
authors = ["Markus A <ge75sig@mytum.de>", "Frank Elsinga <frank@elsinga.de>"]
edition = "2021"
description = "Navigating around TUM with excellence – An API and website to search for rooms, buildings and other places"
repository = "https://github.com/TUM-Dev/navigatum"
readme = "README.md"
license = "GPL-3.0"
keywords = ["website", "navigation", "api-rest", "tum"]
default-run = "navigatum-main-api"

[[bin]]
name = "navigatum-main-api"
path = "src/main.rs"

[dependencies]
# shared
log.workspace = true
structured-logger.workspace = true
tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-web-prom.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true

cached = { version = "0.49.2", features = ["default", "async", "tokio", "disk_store"] }
futures = "0.3.30"
unicode-truncate = "0.2.0"

# setup
serde_yaml = "0.9"

# database
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "migrate", "macros", "chrono"] }
chrono = { version = "0.4.35", default-features = false, features = ["serde"] }

# search
meilisearch-sdk = { version = "0.25.0", default-features = false, features = ["isahc-static-curl", "isahc-static-ssl"] }
logos = "0.14.0"
regex = "1.10.3"

# web access
oauth2 = { version = "4.4.2", default-features = false, features = ["rustls-tls", "reqwest"] }
reqwest = { version = "0.11.27", default-features = false, features = ["tokio-rustls", "rustls-tls-webpki-roots", "rustls", "webpki-roots", "json", "gzip", "hickory-dns"] }

# image production
image.workspace = true
imageproc = "0.24.0"
ab_glyph = "0.2.23"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions.workspace = true

[features]
skip_db_setup = []
skip_ms_setup = []
