[package]
name = "navigatum-main-api"
version = "1.0.0"
authors = ["Markus A <ge75sig@mytum.de>", "Frank Elsinga <frank@elsinga.de>"]
edition = "2021"
description = "Navigating around TUM with excellence – An API and website to search for rooms, buildings and other places"
repository = "https://github.com/TUM-Dev/navigatum"
readme = "README.md"
license = "GPL-3.0"
keywords = ["website", "navigation", "api-rest", "tum"]
default-run = "navigatum-main-api"

[[bin]]
name = "navigatum-main-api"
path = "src/main.rs"

[dependencies]
# logging/obeservability
log = "0.4.21"
actix-web-prom = { version = "0.8.0", default-features = false, features = [] }
env_logger = "0.11.3" # used in dev
structured-logger = "1.0.3" # used in prod

#serialisation
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"

# runtime + webserver
tokio = { version = "1.37", features = ["full"] }
actix-web = { version = "4.5.1", default-features = false, features = ["macros", "compress-gzip", "cookies", "http2"] }
actix-cors = "0.7.0"
rustls = { version = "0.23.5", default-features = false, features = ["ring"] } # the aws' fips complient libary has weird bingen issues which require deeper looking into

cached = { version = "0.51.1", features = ["default", "async", "tokio", "disk_store"] }
futures = "0.3.30"
unicode-truncate = "1.0.0"

# database
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "migrate", "macros", "chrono"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }

# search
meilisearch-sdk = "0.26.0"
logos = "0.14.0"
regex = "1.10.4"

# web access
oauth2 = { version = "4.4.2", default-features = false, features = ["rustls-tls", "reqwest"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "http2", "charset", "json", "gzip", "hickory-dns"] }

# image production
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = "0.24.0"
ab_glyph = "0.2.25"
lazy_static = "1.4.0"

rand = "0.8.5"
octocrab = { version = "0.38.0", default-features = false, features = ["rustls", "rustls-webpki-tokio", "retry", "default-client"] }

# auth/security
jsonwebtoken = { version = "9.3.0", default-features = false, features = [] }
actix-governor = { version = "0.5.0", features = ["logger"] }

# proposing feedback
tempfile = "3.10.1"
base64 = "0.22.1"
time = "0.3.36"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
skip_db_setup = []
skip_ms_setup = []
